[metadata]
name = target-booksy
version = 0.0.1
description = hotglue target for posting data to the Business Central API.
long_description = file: README.md
long_description_content_type = text/markdown
author = hotglue
url = https://github.com/hotgluexyz/target-booksy
license = GNU Affero General Public v3
keywords = booksy, singer, stitch, ETL
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license_file = LICENSE

[options]
package_dir=
    =src
packages=find:
py_modules = target_booksy
include_package_data = true
zip_safe = False

python_requires = >=3.7
install_requires =
    pandas>=2.0.0
    singer-python>=5.0.12
    requests>=2.28.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    target-booksy = target_booksy:main

[flake8]
max-line-length = 120
select = C,E,F,W,B,B950
ignore = E203,E501,W503

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_singer = singer
known_first_party =
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,SINGER,FIRSTPARTY,LOCALFOLDER
